[gd_scene load_steps=8 format=3 uid="uid://ccn8tajs6upnn"]

[ext_resource type="Script" path="res://scripts/test_chase_cutscene.gd" id="1_2ebri"]
[ext_resource type="MeshLibrary" uid="uid://db4nrg4eudeiu" path="res://libraries/floorPhysics.tres" id="1_bvhkt"]
[ext_resource type="PackedScene" uid="uid://73jm5qjy52vq" path="res://dialogue/downerBalloon.tscn" id="2_ch3de"]
[ext_resource type="Script" path="res://scripts/monster_camera.gd" id="2_f8cdt"]
[ext_resource type="PackedScene" uid="uid://d1m0i4tjyxoy8" path="res://scenes/player.tscn" id="3_3gi4h"]
[ext_resource type="PackedScene" uid="uid://7hppi53lwwnt" path="res://assets/preBirdFly.gltf" id="3_ocpak"]
[ext_resource type="PackedScene" uid="uid://bfp5ho6x83opq" path="res://assets/preMonster.gltf" id="4_a6cir"]

[node name="testChaseCutscene" type="Node3D"]
script = ExtResource("1_2ebri")
balloon = ExtResource("2_ch3de")

[node name="firstFloor" type="GridMap" parent="."]
transform = Transform3D(1.8, 0.0017202, -0.00189014, -0.00171986, 1.8, 0.000324295, 0.00189045, -0.000322489, 1.8, -0.00739062, -1.79903, 5.40032)
mesh_library = ExtResource("1_bvhkt")
data = {
"cells": PackedInt32Array(65534, 0, 1, 65533, 0, 1, 65533, 65535, 1, 65534, 65535, 1, 65535, 65535, 1, 65535, 0, 1, 0, 0, 1, 0, 65535, 1, 1, 65535, 1, 1, 0, 1, 1, 65534, 1, 0, 65534, 1, 0, 65533, 1, 1, 65533, 1, 1, 65532, 1, 0, 65532, 1, 65535, 65532, 1, 65535, 65533, 1, 65534, 65533, 1, 65534, 65532, 1, 65533, 65532, 1, 65533, 65533, 1, 65532, 65533, 1, 65532, 65532, 1, 65532, 0, 1, 65532, 65535, 1, 65535, 65534, 1, 65533, 65519, 524289, 65533, 65520, 524289, 65533, 65521, 524289, 65533, 65522, 524289, 65533, 65523, 524289, 65533, 65524, 524289, 65533, 65525, 524289, 65533, 65526, 524289, 65533, 65527, 524289, 65533, 65528, 524289, 65533, 65529, 524289, 65533, 65530, 524289, 65533, 65531, 524289, 65534, 65519, 524289, 65534, 65520, 524289, 65534, 65521, 524289, 65534, 65522, 524289, 65534, 65523, 524289, 65534, 65524, 524289, 65534, 65525, 524289, 65534, 65526, 524289, 65534, 65527, 524289, 65534, 65528, 524289, 65534, 65529, 524289, 65534, 65530, 524289, 65534, 65531, 524289, 65535, 65519, 524289, 65535, 65520, 524289, 65535, 65521, 524289, 65535, 65522, 524289, 65535, 65523, 524289, 65535, 65524, 524289, 65535, 65525, 524289, 65535, 65526, 524289, 65535, 65527, 524289, 65535, 65528, 524289, 65535, 65529, 524289, 65535, 65530, 524289, 65535, 65531, 524289, 0, 65519, 524289, 0, 65520, 524289, 0, 65521, 524289, 0, 65522, 524289, 0, 65523, 524289, 0, 65524, 524289, 0, 65525, 524289, 0, 65526, 524289, 0, 65527, 524289, 0, 65528, 524289, 0, 65529, 524289, 0, 65530, 524289, 0, 65531, 524289, 1, 65519, 524289, 1, 65520, 524289, 1, 65521, 524289, 1, 65522, 524289, 1, 65523, 524289, 1, 65524, 524289, 1, 65525, 524289, 1, 65526, 524289, 1, 65527, 524289, 1, 65528, 524289, 1, 65529, 524289, 1, 65530, 524289, 1, 65531, 524289, 2, 65519, 524289, 2, 65520, 524289, 2, 65521, 524289, 2, 65522, 524289, 2, 65523, 524289, 2, 65524, 524289, 2, 65525, 524289, 2, 65526, 524289, 2, 65527, 524289, 2, 65528, 524289, 2, 65529, 524289, 2, 65530, 524289, 2, 65531, 524289, 3, 65519, 524289, 3, 65520, 524289, 3, 65521, 524289, 3, 65522, 524289, 3, 65523, 524289, 3, 65524, 524289, 3, 65525, 524289, 3, 65526, 524289, 3, 65527, 524289, 3, 65528, 524289, 3, 65529, 524289, 3, 65530, 524289, 3, 65531, 524289, 4, 65519, 524289, 4, 65520, 524289, 4, 65521, 524289, 4, 65522, 524289, 4, 65523, 524289, 4, 65524, 524289, 4, 65525, 524289, 4, 65526, 524289, 4, 65527, 524289, 4, 65528, 524289, 4, 65529, 524289, 4, 65530, 524289, 4, 65531, 524289, 5, 65519, 524289, 5, 65520, 524289, 5, 65521, 524289, 5, 65522, 524289, 5, 65523, 524289, 5, 65524, 524289, 5, 65525, 524289, 5, 65526, 524289, 5, 65527, 524289, 5, 65528, 524289, 5, 65529, 524289, 5, 65530, 524289, 5, 65531, 524289)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Player" parent="." instance=ExtResource("3_3gi4h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.092, 2, 5)

[node name="blockbench_export2" parent="." instance=ExtResource("4_a6cir")]
transform = Transform3D(-4.2608e-08, -5.3528e-10, -1, 1.45519e-10, 1, 6.12914e-11, 1, 1.74623e-10, -4.48199e-08, -7, 3.57628e-07, 5)

[node name="monsterCamera" type="Camera3D" parent="blockbench_export2"]
unique_name_in_owner = true
transform = Transform3D(-0.906751, -0.000790869, -0.421666, 0.177337, 0.906546, -0.383046, 0.382563, -0.422105, -0.821871, -0.499681, 2.00097, -2.29261)
script = ExtResource("2_f8cdt")

[node name="blockbench_export" parent="." instance=ExtResource("3_ocpak")]
transform = Transform3D(1, -4.71801e-11, 1.38778e-17, 2.359e-11, 0.5, 0.866026, -4.08591e-11, -0.866026, 0.5, -0.092, 2.2, 17)

[node name="markerDoor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.092, 1, -21.459)

[node name="markerDoorUp" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.092, 2, -21.459)

[node name="markerRoom" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -21)

[node name="markerRoomUp" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 2, -21)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
light_energy = 1.542
light_indirect_energy = 1.105
light_angular_distance = 32.53
sky_mode = 1
